# aegis

./: .gitignore  CLAUDE.md  PLAN.md  README.md  THREAT_MODEL.md  pyproject.toml
.github/workflows/: ci.yml
examples/: multi_agent_demo.py
src/aegis/: __init__.py  audit.py  broker.py  capability.py  enforced_store.py  generator.py  llm.py  memory.py  pipeline.py  store.py  verifier.py
tests/: test_audit.py  test_broker.py  test_capability.py  test_enforced_store.py  test_generator.py  test_llm.py  test_memory.py  test_pipeline.py  test_store.py  test_verifier.py
