[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-substrate"
version = "0.1.0"
description = "A data-centric, capability-based substrate for multi-agent systems. Protect the data, not the sandbox."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "edgemoorlf" }]
keywords = ["multi-agent", "capability-security", "audit-log", "immutable", "agents", "data-provenance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/edgemoorlf/aegis"
Issues = "https://github.com/edgemoorlf/aegis/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/aegis"]
